--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -9,3 +9,6 @@ container_commands:
 
   03_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
+
+  04_wsgireplace:
+    command: "cp wsgi.conf ../wsgi.conf"
