--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -8,7 +8,7 @@ environment-defaults:
 global:
   application_name: memocha
   branch: null
-  default_ec2_keyname: aws-eb
+  default_ec2_keyname: eb-2
   default_platform: Python 3.4
   default_region: us-east-1
   include_git_submodules: true
